--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ GitPython==3.0.5
 input==0.0.0
 Mako==1.1.0
 MarkupSafe==1.1.1
+numpy==1.18.1
+opencv-python==4.1.2.30
 pigpio==1.44
 ruamel.yaml==0.16.5
 ruamel.yaml.clib==0.2.0
